<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorLOGOblue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/desg_popup_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/country_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAllCaps="false"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/desig_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/close_tv_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="Close" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/shape"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="5dp">

                    <ImageView
                        android:id="@+id/back_img"
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/leftarrow"
                        android:tint="@color/colorWhite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="Register"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/type_rg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/sgh_rb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/colorWhite"
                            android:checked="true"
                            android:text="SHG"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/student_rb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/colorWhite"

                            android:text="Student"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/employe_rb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/colorWhite"
                            android:text="Staff"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/nregs_rb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/colorWhite"
                            android:text="NREGS"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"
                            android:visibility="visible" />

                    </RadioGroup>

                    <EditText
                        android:id="@+id/name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="@string/name"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/phone_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/wspnumber_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="Whatsapp Number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/usrname_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="@string/user_name"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/password_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="@string/password"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"

                        android:singleLine="true"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/confirmpass_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="Confirm Password"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="17sp" />

                    <RelativeLayout
                        android:id="@+id/mandal_rl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/downarrow_icon" />

                        <TextView
                            android:id="@+id/mandal_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="Select Mandal"
                            android:textSize="17sp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/vo_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="@string/vo"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/noof_cards_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/grey_rounded_corners_popup"
                        android:hint="@string/no_of_cards_ex_100"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:singleLine="true"
                        android:textSize="17sp"
                        android:visibility="visible" />

                    <EditText
                        android:id="@+id/address_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/grey_rounded_corners_popup"
                        android:gravity="top"
                        android:hint="Address"
                        android:paddingLeft="10dp"
                        android:paddingTop="12dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/submit_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/white_rounded_corners_popup"
                        android:elevation="7dp"
                        android:paddingLeft="25dp"
                        android:paddingTop="10dp"
                        android:paddingRight="25dp"
                        android:paddingBottom="10dp"
                        android:text="Submit"
                        android:textColor="@color/colorLOGOblue"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/mandals_popup_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_tv_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Select Mandal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider"
            android:visibility="gone" />

        <EditText
            android:id="@+id/serach_edt_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/grey_rounded_corners_popup"
            android:ems="10"
            android:gravity="center"
            android:hint="Search for Mandals"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nodata_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="No Data Available"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mandals_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/close_tv_mandals_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/blue_rounded_corners"
            android:elevation="7dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="Close"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>